Mobile Query: still trying to figure out margin-bottom issue that is showing up on iPhone

--- a/media-queries/_mobile.scss
+++ b/media-queries/_mobile.scss
@@ -26,7 +26,7 @@
 	.sidebar div.mobile-accordion {
 		margin-bottom: 0 !important;
 	}
-	.sidebar div.preview-editable {
+	div.sidebar.preview-editable {
 		margin-bottom: 0 !important;
 	}
 
