--- a/style.css
+++ b/style.css
@@ -3582,7 +3582,7 @@ ul.flex-direction-nav {
   .sidebar div.mobile-accordion {
     margin-bottom: 0 !important; }
 
-  .sidebar div.preview-editable {
+  div.sidebar.preview-editable {
     margin-bottom: 0 !important; } }
 /* #Mobile (Landscape)
 ================================================== */
